# pdec

./: .gitignore  CMakeLists.txt  README.md
io/: hi_hexedited.png.bak
src/: test.c
src/PngDeCoder/: pdec.c  pdec.h
